--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tokio = { version = "1.36", features = ["full"] }
 futures = "0.3"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
+async-trait = "0.1"
 
 [dev-dependencies]
 rstest = "0.18"
@@ -28,3 +29,4 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 kube = { version = "0.99.0", features = ["runtime"] }
 k8s-openapi = { version = "0.24", features = ["v1_28"] }
 serde_json = "1.0"
+mockall = "0.10"
