--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "configmap",
+        "geeko",
         "mockall",
+        "sprouter",
         "withf"
     ]
 }
